# turboquant-m2

./: .gitignore  LICENSE  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  RUN_EXPERIMENT.md  TUTORIAL.md  pyproject.toml
benchmarks/: needle_v2_mlx_turboquant.py  tq_eval.py  tq_eval_65_questions.json  tq_eval_report.py
examples/: 01_basic_usage.py  02_compare_bit_widths.py  03_huggingface_model.py  04_vllm_multi_layer.py  05_ollama_comparison.py  06_fair_comparison_vs_gguf.py  07_ollama_qwen35_4b_context_scaling.py  08_real_qa_reasoning.py  09_interactive.py  10_long_context_stress_test.py  11_quantized_model_with_turboquant.py  12_library_comparison.py  13_mlx_turboquant_live.py  14_mlx_full_report.py  15_real_app.py  16_real_world_benchmark.py  benchmark.py
src/turboquant/: __init__.py  attention.py  cache.py  codebook.py  compressor.py  fused_attention.py  hadamard.py  metal_kernel.py  metal_quantize.py  metrics.py  mlx_native.py  patch.py  qjl.py  results.py
src/turboquant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/turboquant/integrations/: __init__.py  hybrid_cache.py  llamacpp_adapter.py  ollama_adapter.py  transformers_adapter.py  vllm_adapter.py
tests/: test_codebook.py  test_compressor.py  test_core.py  test_integrations.py  test_metrics.py  test_security.py
