[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.2.0"
description = "TurboQuant: Near-optimal KV-cache compression for LLM inference using random rotation + Lloyd-Max quantization"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Pradip", email = "pradip@example.com"},
]
keywords = ["llm", "quantization", "kv-cache", "compression", "inference", "transformer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
]
ollama = [
    "requests>=2.28.0",
]
vllm = [
    "vllm>=0.3.0",
]
benchmark = [
    "requests>=2.28.0",
    "transformers>=4.36.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bandit>=1.7",
    "ruff>=0.1.0",
]
all = [
    "turboquant[transformers,ollama,benchmark,dev]",
]

[project.urls]
Homepage = "https://github.com/pradip/turboquant"
Documentation = "https://github.com/pradip/turboquant#readme"
Repository = "https://github.com/pradip/turboquant"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
ignore = ["S101"]  # allow assert in tests

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
